tdf#122057: read tiff with deflate compression (code 32946 only)

Change-Id: I2c8d244fa89a2378bfe3b87d3d3262810c9952be