vcl/Library_vcl.mk
@@ -69,6 +69,7 @@ $(eval $(call gb_Library_use_libraries,vcl,\
     i18nutil \
     $(if $(ENABLE_JAVA),jvmaccess) \
     $(if $(filter OPENCL,$(BUILD_TYPE)),opencl) \
+    package2 \
     sal \
     salhelper \
     sot \
